--- a/desafios/d012/estilo/style.css
+++ b/desafios/d012/estilo/style.css
@@ -5,10 +5,21 @@
     padding: 0px;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+:root{
+      --fonte1:Verdana, Geneva, Tahoma, sans-serif ;
+      --fonte2:'Passion One', cursive;
+      --fonte3:'Sriracha', cursive;
+}
 
 html, body{
     min-width: 100vh;
     background-color: darkgray;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: var(--fonte1);
 }
 
 header{
@@ -20,6 +31,8 @@ header{
 header > h1{
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--fonte1);
+    font-size: 10vh;
 }
 
 header > p{
@@ -41,6 +54,8 @@ section{
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--fonte3);
+    font-size: 3.5vh;
 }
 
 section.normal{
@@ -54,7 +69,8 @@ section.imagem{
 }
 
 section.imagem > p{
-    width: 400px;
+    display: inline-block;
+    padding: 5px;
     background-color: rgba(0, 0, 0, 253);
 }
 
